TrialoftheTitansPackage/main/default/objects/Hero_Apex_Test_Result__c/Hero_Apex_Test_Result__c.object-meta.xml
<CustomObject>
    <label>Hero Apex Test Result</label>
    <nameField>
        <displayFormat>Test-{0000}</displayFormat>
        <label>Hero Apex Test Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hero Apex Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>