TrialoftheTitansPackage/main/default/objects/Hero_Apex_Test_Result__c/fields/Coding_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Coding_Assessment__c</fullName>
    <label>Coding Assessment</label>
    <referenceTo>Coding_Assessment__c</referenceTo>
    <relationshipLabel>Hero Apex Test Results</relationshipLabel>
    <relationshipName>Hero_Apex_Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>