TrialoftheTitansPackage/main/default/objects/Hero_Apex_Test_Result__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>