TrialoftheTitansPackage/main/default/objects/Hero_Apex_Test_Result__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>