TrialoftheTitansPackage/main/default/objects/Hero_Apex_Test_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Coding_Assessment__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Passed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>